<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="album_title_bookmarks">Bookmarks</string>
    <string name="album_title_tab">Opened Tabs</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_done">Done</string>
    <string name="app_error">Error</string>
    <string name="app_name">FREE Browser</string>
    <string name="app_ok">OK</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_title_history">Clear History</string>
    <string name="clear_title_quit">Clear on application exit</string>
    <string name="color_blue">Blue</string>
    <string name="color_brown">Brown</string>
    <string name="color_green">Green</string>
    <string name="color_grey">Grey</string>
    <string name="color_lime">Lime</string>
    <string name="color_orange">Orange</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_red">Red</string>
    <string name="color_teal">Teal</string>
    <string name="color_yellow">Yellow</string>
    <string name="copy">Copy</string>
    <string name="data_summary">All files will be exported to the \"Documents/browser_backup/\" directory of your SD-card.</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="dialog_URL_hint">URL:</string>
    <string name="dialog_Warning">Google has announced that, starting in 2026/2027, all apps on certified Android devices will require the developer to submit personal identity details directly to Google. Since the developers of this app do not agree to this requirement, this app will no longer work on certified Android devices after that time.</string>
    <string name="dialog_content_resubmission">Resubmit your data?</string>
    <string name="dialog_content_ssl_error">The certificate of the site is not trusted. Proceed anyway?</string>
    <string name="dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="dialog_more_info">Details</string>
    <string name="dialog_sign_in_password">Password</string>
    <string name="dialog_sign_in_username">Username</string>
    <string name="dialog_sortDate">Sort by date</string>
    <string name="dialog_sortIcon">Sort by icon</string>
    <string name="dialog_sortName">Sort by name</string>
    <string name="dialog_title_download">Download the file?</string>
    <string name="dialog_title_hint">Title:</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_allow_camera">Allow camera usage</string>
    <string name="error_allow_microphone">Allow microphone usage</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_missing_permission">Permission required:</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_DRM_Media">Allow DRM protected media playback?</string>
    <string name="hint_database">This will delete current data. Proceed?</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="list_empty">List is empty</string>
    <string name="localData">Clear on device stored data</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="main_menu_new_tab">New tab (background)</string>
    <string name="main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="main_menu_tabPreview">Open tab preview</string>
    <string name="main_omnibox_input_hint">Search or type URL</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="metered_connection">Metered Connection</string>
    <string name="setting_filter">Bookmark filter</string>
    <string name="setting_gesture_down">Swipe down</string>
    <string name="setting_gesture_left">Swipe left</string>
    <string name="setting_gesture_right">Swipe right</string>
    <string name="setting_gesture_up">Swipe up</string>
    <string name="setting_network">Network settings</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_title_app">App Settings</string>
    <string name="setting_title_autofill">Form Data</string>
    <string name="setting_title_behavior">Behavior</string>
    <string name="setting_title_browser">Browser Settings</string>
    <string name="setting_title_confirm_exit">Confirm browser exit</string>
    <string name="setting_title_confirm_tab_close">Confirm tab close</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_title_custom_host_list">Additional domains</string>
    <string name="setting_title_data">Backup</string>
    <string name="setting_title_deny_cookie_banners">Cookie Banner Blocker</string>
    <string name="setting_title_dom">DOM Storage</string>
    <string name="setting_title_dom_whitelist">DOM Whitelist</string>
    <string name="setting_title_fav">Start page</string>
    <string name="setting_title_hideToolbar">Hide toolbar</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_title_proxy">Proxy</string>
    <string name="setting_title_searchEngine">Custom search engine</string>
    <string name="setting_title_search_engine">Search Engine</string>
    <string name="setting_title_toolbar">Toolbar</string>
    <string name="setting_title_ui">Behavior/UI</string>
    <string name="setting_title_userAgent">Custom user agent</string>
    <string name="setting_title_whitelistCookie">Cookie whitelist</string>
    <string name="setting_title_whitelistJS">JavaScript whitelist</string>
    <string name="setting_userScript">Greasemonkey Scripts</string>
    <string name="summary_deny_cookie_banners">"Try to automatically deny cookie banners using Mozilla's Cookie Banner Rules"</string>
    <string name="whitelist_add">Add</string>
    <string name="whitelist_edit_hint">Domain</string>
</resources>