<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_theme">
        <ListPreference android:entries="@array/setting_entries_theme" android:key="sp_theme" android:defaultValue="1" android:entryValues="@array/setting_values_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_title_behavior">
        <SwitchPreference android:title="@string/setting_title_hideToolbar" android:key="hideToolbar" android:defaultValue="true" />
        <SwitchPreference android:title="@string/setting_title_confirm_exit" android:key="sp_close_browser_confirm" android:defaultValue="true" />
        <SwitchPreference android:title="@string/setting_title_confirm_tab_close" android:key="sp_close_tab_confirm" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_title_toolbar">
        <ListPreference android:entries="@array/setting_entries_gestures" android:title="@string/setting_gesture_up" android:key="setting_gesture_tb_up" android:defaultValue="13" android:entryValues="@array/setting_values_gestures" />
        <ListPreference android:entries="@array/setting_entries_gestures" android:title="@string/setting_gesture_down" android:key="setting_gesture_tb_down" android:defaultValue="1" android:entryValues="@array/setting_values_gestures" />
        <ListPreference android:entries="@array/setting_entries_gestures" android:title="@string/setting_gesture_left" android:key="setting_gesture_tb_left" android:defaultValue="2" android:entryValues="@array/setting_values_gestures" />
        <ListPreference android:entries="@array/setting_entries_gestures" android:title="@string/setting_gesture_right" android:key="setting_gesture_tb_right" android:defaultValue="3" android:entryValues="@array/setting_values_gestures" />
    </PreferenceCategory>
</PreferenceScreen>
