<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout android:id="@id/view3" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@id/toolbar" android:background="?colorPrimaryDark" android:layout_width="match_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar" />
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/whitelist_edit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:hint="@string/whitelist_edit_hint" android:selectAllOnFocus="true" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:textCursorDrawable="@null" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" android:importantForAutofill="no" />
            <com.google.android.material.button.MaterialButton android:ellipsize="end" android:id="@id/whitelist_add" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="@string/whitelist_add" android:maxLines="1" android:includeFontPadding="false" android:textAllCaps="true" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" />
        </LinearLayout>
        <ListView android:id="@id/whitelist" android:layout_width="match_parent" android:layout_height="match_parent" android:drawSelectorOnTop="true" />
        <TextView android:textColor="?colorHint" android:gravity="center" android:layout_gravity="center|top" android:id="@id/whitelist_empty" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20.0dp" android:text="@string/list_empty" android:textAllCaps="false" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
